Rollback P/ antes da autenticação

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -61,7 +61,7 @@
                     <div class="switch">
                       <label>
                         Inativo
-                        <input type="checkbox" checked>
+                        <input id="status" type="checkbox" checked>
                         <span class="lever"></span>
                         Ativo
                       </label>
