Model de notificação ativo e cadastro concluido

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -92,7 +92,7 @@
   </ul>
 <!--AVISOS-->
    <!-- Modal Trigger -->
-   <a id="model_notificao" class="waves-effect waves-light btn modal-trigger" href="#modal1">Notificação</a>
+   <a id="model_notificao" style="display:none" class="waves-effect waves-light btn modal-trigger" href="#modal1">Notificação</a>
 
    <!-- Modal Structure -->
    <div id="modal1" class="modal">
@@ -103,7 +103,7 @@
        </div>  
       </div>
      <div class="modal-footer">
-       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+       <a href="#!" class="modal-close waves-effect waves-green btn-flat">OK</a>
      </div>
    </div>
 
