alterar cliente ok

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col s12">
             <ul class="tabs">
-              <li class="tab col s3"><a class="active" href="#cliente">Clientes</a></li>
+              <li class="tab col s3"><a id='cliente_menu' class="active" href="#cliente">Clientes</a></li>
               <li class="tab col s3"><a id='altera_cliente_menu' href="#altera_cliente">Alterar Cliente</a></li>
               <li class="tab col s3"><a href="#cadastro_cli">Cadastro</a></li>
             </ul>
@@ -134,7 +134,7 @@
                                 </div>
                               </div>
                               <center>
-                              <button class="btn waves-effect waves-light" type="button" name="altera_cliente" id="altera_cliente">Alterar
+                              <button class="btn waves-effect waves-light" type="button" name="altera_cliente_botao" id="altera_cliente_botao">Alterar
                                 <i class="material-icons right">send</i>
                               </button>
 
