validação do id_cliente no cadastro do contato

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -278,8 +278,8 @@
           <label for="cpf">CPF</label>
         </div>
         <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">ID CLIENTE</label>
+          <input id="id_cliente" type="text" class="validate">
+          <label for="id_cliente">ID CLIENTE</label>
         </div>
       </div>
         <p class='center' id='nome_do_cliente'></p>
