--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -196,7 +196,7 @@
       </div>
     </li>
     <li>
-      <div class="collapsible-header" tabindex="0"><i class="material-icons">contacts</i>Contato<span class="badge">1</span></div>
+      <div class="collapsible-header" tabindex="0"><i class="material-icons">contacts</i>Contato<span class="badge"></span></div>
       <div class="collapsible-body">
       
       
